Fix dark mode code blocks on Firefox small screens

--- a/_sass/spec/base.scss
+++ b/_sass/spec/base.scss
@@ -629,6 +629,7 @@ div.primer-spec-callout {
   }
 
   table.highlight {
+    width: 100%;
     margin: 0px;
     border: 0px;
     border-radius: 5px;
